tests/suite/fail/generated/borrow/fail_move_save_msg.ny
fn save(x: string) -> void { print(x) }
fn main() {
    let msg = "hello"
    save(msg)
    print(msg) //~ ERROR was moved
}
